AC_PREREQ([2.63])
AC_INIT(grew, 1.0, paul.masson@inria.fr)

echo ""
echo "Checking essential libraries, tools and programs."
echo ""

AC_ARG_ENABLE(
	[config],
 	[AS_HELP_STRING(
		[--enable-config],
		[Enable configuration check (default is yes)])],
	[config=$enableval],
	[config=yes])

if test "$config" = yes ; then

	# Look for ocamlfind
	AC_PATH_PROG(OCAMLFIND,ocamlfind,no)

	# Checks for libraries.
	AC_MSG_CHECKING(for ocaml library path)
	OCAMLLIB=$(ocamlc -where)
	AC_MSG_RESULT($OCAMLLIB)
	if test "$OCAMLLIB" = ""; then
		AC_MSG_ERROR(Cannot find ocaml library path)
	fi

	AC_PATH_PROG(MENHIR,menhir,no)
	if test "$MENHIR" = "no"; then
		AC_MSG_ERROR(Cannot find menhir)
	fi


	#Look for ANSITerminal
	AC_MSG_CHECKING([for ANSITerminal])
	if test -f c_check_ANSITerminal.ml ; then
		if test -w c_check_ANSITerminal.ml ; then
			rm c_check_ANSITerminal.* >& /dev/null
		else
			AC_MSG_ERROR(Cannot remove c_check_ANSITerminal.ml. Please change its right with chmod 666 c_check_ANSITerminal.ml)
		fi
	fi
	echo "open ANSITerminal;;" > c_check_ANSITerminal.ml
	if (ocaml ANSITerminal.cma  c_check_ANSITerminal.ml >& /dev/null) ; then
		AC_MSG_RESULT(standard)
	else
		if test "$OCAMLFIND" = no ; then
		            AC_MSG_ERROR(The ANSITerminal library is missing.)
		    else
		            if $OCAMLFIND query ANSITerminal > /dev/null 2>&1 ; then
		                    ANSITERMINAL_INCLUDE="-I `$OCAMLFIND query ANSITerminal`"
		                    AC_MSG_RESULT(ocamlfind)
		            else
		                    AC_MSG_ERROR(The ANSITerminal library is missing.)
		            fi
		    fi
	fi
	rm c_check_ANSITerminal.ml >& /dev/null

	#Look for Log
	AC_MSG_CHECKING([for log])
	if test -f c_check_log.ml ; then
		if test -w c_check_log.ml ; then
			rm c_check_log.* >& /dev/null
		else
			AC_MSG_ERROR(Cannot remove c_check_log.ml. Please change its right with chmod 666 c_check_log.ml)
		fi
	fi
	echo "open Log;;" > c_check_log.ml
	if (ocamlc -c log.cma  c_check_log.ml >& /dev/null) ; then
		AC_MSG_RESULT(standard)
	else
		if test "$OCAMLFIND" = no ; then
		            AC_MSG_ERROR(The log library is missing.)
		    else
		            if $OCAMLFIND query log > /dev/null 2>&1 ; then
		                    LOG_INCLUDE="-I `$OCAMLFIND query log`"
		                    AC_MSG_RESULT(ocamlfind)
		            else
		                    AC_MSG_ERROR(The log library is missing.)
		            fi
		    fi
	fi
	rm c_check_log.* >& /dev/null
	
	#Look for Dep2pict
	AC_MSG_CHECKING([for dep2pict])
	if test -f c_check_dep2pict.ml ; then
		if test -w c_check_dep2pict.ml ; then
			rm c_check_dep2pict.* >& /dev/null
		else
			AC_MSG_ERROR(Cannot remove c_check_dep2pict.ml. Please change its right with chmod 666 c_check_dep2pict.ml)
		fi
	fi
	echo "open Dep2pict;;" > c_check_dep2pict.ml
	if (ocamlc -c dep2pict.cma  c_check_dep2pict.ml >& /dev/null) ; then
		AC_MSG_RESULT(standard)
	else
		if test "$OCAMLFIND" = no ; then
		            AC_MSG_ERROR(The dep2pict library is missing.)
		    else
		            if $OCAMLFIND query dep2pict > /dev/null 2>&1 ; then
		                    DEP2PICT_INCLUDE="-I `$OCAMLFIND query dep2pict`"
		                    AC_MSG_RESULT(ocamlfind)
		            else
		                    AC_MSG_ERROR(The dep2pict library is missing.)
		            fi
		    fi
	fi
	rm c_check_dep2pict.* >& /dev/null

fi

AC_ARG_ENABLE(
	[debug],
 	[AS_HELP_STRING([--enable-debug], [Display debug trace])],
	[with_debug=$enableval],
	[with_debug=no])
AC_ARG_ENABLE(
	[warning],
 	[AS_HELP_STRING([--enable-warning], [Display warning trace])],
	[with_warning=$enableval],
	[with_warning=no])
AC_ARG_ENABLE(
	[message],
 	[AS_HELP_STRING([--enable-message], [Display message trace])],
	[with_message=$enableval],
	[with_message=yes])
AC_ARG_ENABLE(
	[info],
 	[AS_HELP_STRING([--enable-info], [Display info trace])],
	[with_info=$enableval],
	[with_info=yes])


if test "x$with_debug" != xno ; then
	AC_SUBST(DEBUG,yes)
else
	AC_SUBST(DEBUG,no)
fi
if test "x$with_warning" != xno ; then
	AC_SUBST(WARNING,yes)
else
	AC_SUBST(WARNING,no)
fi
if test "x$with_message" != xno ; then
	AC_SUBST(MESSAGE,yes)
else
	AC_SUBST(MESSAGE,no)
fi
if test "x$with_info" != xno ; then
	AC_SUBST(INFO,yes)
else
	AC_SUBST(INFO,no)
fi

#trunk directory
TRUNK=`pwd`
AC_SUBST(TRUNK)


AC_SUBST(OCAMLC)
AC_SUBST(OCAMLOPT)
AC_SUBST(OCAMLLIB)
AC_SUBST(ANSITERMINAL_INCLUDE)
AC_SUBST(LOG_INCLUDE)
AC_SUBST(DEP2PICT_INCLUDE)

echo ""
AC_SUBST(SET_MAKE)
AC_CONFIG_FILES(\
config/Makefile \
Makefile \
src/Makefile \
src/parser/Makefile \
src/HTMLer/Makefile \
src/checker/Makefile \
)

VERSION=`grep "VERSION = .*" config/Makefile.in | sed 's|VERSION = \(.*\)|\1|'`
AC_SUBST(VERSION)



AC_PROG_MAKE_SET
echo ""
echo "Creating Makefiles"
echo ""

AC_OUTPUT

echo ""
echo "Some information"
echo ""

cd config && make infos
echo ""
